panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__generic__test_unevaluated_assocs_are_type_checked.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/generic/test_unevaluated_assocs_are_type_checked.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid operands to binary operator `*`
   ╭─[panko/tests/cases/generic/test_unevaluated_assocs_are_type_checked.c:6:34]
   │
 6 │     return _Generic(main, int: p * 2, default: 42);
   │                                ┬ ─ ┬  
   │                                │   ╰── this is of type `int`
   │                                │      
   │                                ╰────── this is of type `ptr<int>`
───╯
